--- a/foraging_app/static/css/index.css
+++ b/foraging_app/static/css/index.css
@@ -68,7 +68,7 @@
     position: relative; /* Positioning context for the dropdown */
 }
 
-.userLink:hover {
+.username-text:hover {
     text-decoration: underline;
 }
 
